Archive2/56/0afb1304130f2c/output
main.cpp: In function 'int main()':
main.cpp:7:17: error: ISO C++ forbids taking address of function '::main' [-Wpedantic]
     return main();
                 ^
